- The cross-table sample in sample/Practices directory was updated.
- MyNumberCard authentication is available as a part of OAuth authentication.
- OAuth features are refactored.
- INTERMediatorOnPage.userNameJustASCIIUpper and INTERMediatorOnPage.userNameJustASCIILower are introduced. These are
  forcing capitalization of INTERMediatorOnPage.userNameJustASCII.
- [BUG FIX] The cross table feature and search/sort controls with ex. _@addorder didn't compatible. In case of any
  cross table exists, whole page is going to update after click the search/sort controls.

Ver.13 (October 26, 2024)
- In the INTERMediator_DBAdapter, Codes using XMLHttpRequest are replaced with fetch function.
- Variable $extraButtons in the params.php file adds buttons on the authentication panel. The value has to be associated
  array, and the key is button name and the value is moving URL. It assumes that the OAuth button to authenticating.
- 2-factor authentication is supported with e-mail notification. Also the authentication processes are refactored.
- The IMLibContext class has new property 'count', 'resultCount' and 'totalCount' about results of queried recordset.
- The enrollment and password reset samples are updated. They are in samples/Auth_Support/User_Enrollment and PasswordReset.
- The mailtemplate editing page is added in samples/Mail_Support/MySQL_mailtemplate.html
- Field values from SAML attributes can merge from multiple entries.
- Variables $limitEnrollSecond and $limitPwChangeSecond in the params.php file can specify the limit seconds for
  the enrollment mail and password reset mail.
- INTERMediatorOnPage.authPanelExp and INTERMediatorOnPage.authPanelExp2FA can display any explanation
  on authentication panels.
- In the params.php file, variables $authPanelTitle, $authPanelTitle2FA, $authPanelExp and $authPanelExp2FA can
  describe and set any strings including html. These are elements of auth panels as the same name properties of
  INTERMediatorOnPage object.