@@ -11,7 +11,11 @@ After someone tests the OAuth features, the result has to be recorded here.
 
 The format of below is: [commit code from git log], [Version from composer.json], [Checker name], [Result]
 
-- 
+- commit 51b60d401f775cfdab28a2b28dade90292a28cdf (Sun May 18 16:45:01 2025 +0900)
+  INTER-Mediator Ver.14 (2025-05-18) with SimpleSAMLphp Ver.2.4.1,
+  PHP 8.1.2-1ubuntu2.19+MySQL 8.0.40-0ubuntu0.22.04.1+Chrome (136.0.7103.114) on mac,
+  by Masayuki Nii <nii@msyk.net>, OK
+
 
 ## Test Procedure
 
@@ -44,7 +48,7 @@ The test application(https://github.com/INTER-Mediator/IMTesting_OAuth) is deplo
 
 The format of below is: [commit code from git log], [Version from composer.json], [Checker name], [Result]
 
+### Previous Test Records
 
-### Before developing "IMTesting_SAML" app
-
+TBD
 
