@@ -10,10 +10,10 @@ which just have test accounts. After someone tests the SAML features, the result
 
 The format of below is: [commit code from git log], [Version from composer.json], [Checker name], [Result]
 
-- commit 0e0a34d2c7354369e17bcce7bfb8bebd4b7eaa7b (Fri Jul 26 14:14:15 2024 +0900),
-  INTER-Mediator Ver.13(2024-07-26) with SimpleSAMLphp Ver.2.2.2,
-  by Masayuki Nii(2024-07-26 15:00), OK
-  (The test procedure for limited user was added from here testing.)
+- commit 51b60d401f775cfdab28a2b28dade90292a28cdf (Sun May 18 16:45:01 2025 +0900)
+  INTER-Mediator Ver.14 (2025-05-18) with SimpleSAMLphp Ver.2.4.1,
+  PHP 8.1.2-1ubuntu2.19+MySQL 8.0.40-0ubuntu0.22.04.1+Chrome (136.0.7103.114) on mac,
+  by Masayuki Nii <nii@msyk.net>, OK
 
 ## Test Procedure
 
@@ -63,8 +63,12 @@ Set the SAML is inactive ($isSAML = false;), and the built-in auth is inactive (
 
 The format of below is: [commit code from git log], [Version from composer.json], [Checker name], [Result]
 
-
 ### Before developing "IMTesting_SAML" app
+
+- commit 0e0a34d2c7354369e17bcce7bfb8bebd4b7eaa7b (Fri Jul 26 14:14:15 2024 +0900),
+  INTER-Mediator Ver.13(2024-07-26) with SimpleSAMLphp Ver.2.2.2,
+  by Masayuki Nii(2024-07-26 15:00), OK
+  (The test procedure for limited user was added from here testing.)
 
 - commit 1f0eca34f4e4e859a5533cf3a7c9a3306f0903f0 (Wed Jun 19 12:19:35 2024 +0900),
   INTER-Mediator Ver.13(2024-04-26) with SimpleSAMLphp Ver.2.2.2,
