@@ -66,9 +66,9 @@ exports.config = {
     maxInstances: 3, //
     //
     browserName: 'firefox',
-    'moz:firefoxOptions': {
-      args: ['-headless']
-    }
+    // 'moz:firefoxOptions': {
+    //   args: ['-headless']
+    // }
   }
     // If outputDir is provided WebdriverIO can capture driver session logs
     // it is possible to configure which logTypes to include/exclude.
