@@ -40,6 +40,7 @@ Ver.14 (in Development)
 - OAuth features are refactored.
 - INTERMediatorOnPage.userNameJustASCIIUpper and INTERMediatorOnPage.userNameJustASCIILower are introduced. These are
   forcing capitalization of INTERMediatorOnPage.userNameJustASCII.
+- Twe Manual-Test procedures are added. These are for OAuth and MyNumberCard authentications.
 - [BUG FIX] The cross table feature and search/sort controls with ex. _@addorder didn't compatible. In case of any
   cross table exists, whole page is going to update after click the search/sort controls.
 
